# tauri-plugin-view

./: Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
.github/workflows/: release.yml
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ViewPluginInstrumentedTest.kt
android/src/main/java/: ViewPlugin.kt
android/src/test/java/: ViewPluginUnitTest.kt
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ViewPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
