[package]
name = "tauri-plugin-view"
description = "A mobile plugin for Tauri for viewing and sharing files."
version = "0.0.5"
authors = ["Ecmel Ercan"]
license = "MIT"
license-file = "LICENSE"
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-view"

[dependencies]
tauri = "2.0.0"
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }
